Add WebNavigationUtil for domain and paths allowed